crates/rymx/tests/snapshots/full__main@mini__prelude.rym.snap
---
source: crates/rymx/tests/full.rs
assertion_line: 15
expression: diag.outputs_dump() + &diag.reports_dump()
input_file: crates/rymx/tests/mini/prelude.rym
---
--- tokenize ---
Const [const]
HSpace [ ]
Ident [println]
HSpace [ ]
Assign [=]
HSpace [ ]
Fn [fn]
ParenOpen [(]
Ident [fmt]
Colon [:]
HSpace [ ]
Ident [String]
Comma [,]
HSpace [ ]
DotDot [..]
Ident [args]
Colon [:]
HSpace [ ]
BracketOpen [[]
Impl [impl]
HSpace [ ]
Ident [Display]
BracketClose []]
ParenClose [)]
HSpace [ ]
ThickArrow [=>]
HSpace [ ]
BraceOpen [{]
VSpace [\n]
HSpace [\t]
Comment [// TODO]
VSpace [\n]
BraceClose [}]
Semi [;]
VSpace [\n]

--- parse ---

--- reports ---
Error: Syntax Error
   ╭─[/home/simon/dev/rym/crates/rymx/tests/mini/prelude.rym:1:33]
   │
 1 │ const println = fn(fmt: String, ..args: [impl Display]) => {
   │                                 ─┬  
   │                                  ╰── Expected identifier | `)`, found `..`.
───╯

